--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Segundo proyecto de practico js</title>
 </head>
 <body>
+    <div class="titulo">
+        <h1>Hola curso practico de JavaScript</h1>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
